<resources>
    <!--    <string name="app_name">MyAeki</string>-->
    <string name="hello_blank_fragment">hahaha</string>

    <!-- NOTE: Top Nav Bar -->
    <string name="nav_top_back">Kembali</string>
    <string name="nav_top_share">Bagikan</string>
    <string name="nav_top_search">Cari</string>
    <string name="close">Tutup</string>

    <!-- NOTE: Sign In -->
    <string name="app_name">LoginorSignin</string>
    <string name="welcome">Selamat datang di DEKORA</string>
    <string name="pendaftaran">Daftar atau masuk untuk melihat list belanja Anda, pembelian, reward atau lainnya</string>
    <string name="email">Email</string>
    <string name="placeholder_email">contoh@email.com</string>
    <string name="password">Kata Sandi</string>
    <string name="placeholder_password">Masukkan Kata Sandi</string>
    <string name="password_visibility">vis</string>
    <string name="forgotPW">Lupa kata sandi?</string>
    <string name="button_signin">Masuk</string>
    <string name="button_signup">Daftar</string>
    <string name="loginWarning">Pelanggan wajib untuk melakukan login terlebih dahulu untuk melanjutkan</string>

    <!--    Note: Sign Up-->
    <string name="signup">Buat Akun</string>
    <string name="fill_required">Isi semua kolom untuk membuat akun Dekora\nSemua kolom wajib
        diisi</string>
    <string name="first_name">Nama Anda</string>
    <string name="placeholder_first_name">Nama Anda</string>
    <string name="last_name">Nama Belakang</string>
    <string name="placeholder_last_name">Nama Belakang Anda</string>
    <string name="address">Alamat</string>
    <string name="placeholder_address">Masukkan Alamat Pengiriman</string>
    <string name="postal_code">Kode Pos</string>
    <string name="placeholder_postal_code">Kode pos</string>
    <string name="detail_inp_password">Kata sandi harus terdiri dari minimal 8 karakter,
        termasuk minimal satu huruf kapital dan minimal satu angka.</string>
    <string name="retype_password">Ketik ulang kata sandi Anda:</string>
    <string name="placeholder_confirm_password">Konfirmasi kata sandi Anda:</string>
    <string name="commit_privacy">Kami berkomitmen untuk melindungi dan menghargai privasi
        Anda, seperti mengirimkan pesan yang dipersonalisasi, materi promosi, berita,
        informasi, serta tujuan yang dijelaskan dalam kebijakan privasi kami.</string>
    <string name="checkbox_privacy_policy">Dengan mencentang kotak, saya telah membaca dan
        menerima Ketentuan penjualan Belanja Online | Dekora Indonesia dan Kebijakan Privasi</string>
    <string name="call_center">Butuh bantuan? Hubungi kami.</string>
    <string name="button_create_account">Buat Akun</string>

    <!--    Note: Cari Produk-->
    <string name="placeholder_search">Masukkan kata kunci</string>

    <!--    note: top up-->
    <string name="title_top_up">Top Up</string>
    <string name="choose_total_topup">Pilih Nominal</string>
    <string name="topup_20k">20.000</string>
    <string name="topup_50k">50.000</string>
    <string name="topup_100k">100.000</string>
    <string name="choose_payment_method">Metode Pembayaran</string>
    <string name="payment_by_bca">BCA Virtual Account</string>
    <string name="payment_by_qris">QRIS</string>
    <string name="payment_by_indomaret">Indomaret</string>
    <string name="term_conditions">Syarat dan Ketentuan:</string>
    <string name="term_conditions_detail">1. Minimal transaksi top up adalah sebesar Rp
        20.000.\nPengguna tidak dapat melakukan pengisian saldo di bawah nominal tersebut. Pastikan jumlah nominal yang dipilih sesuai dengan kebutuhan dan batas minimal yang berlaku.\n\n
2. Dana yang telah ditop up tidak dapat dikembalikan.\nSetelah proses top up berhasil, dana yang masuk ke saldo akun pengguna bersifat final dan tidak dapat diuangkan kembali atau ditransfer ke rekening bank.\n\n
3. Pembayaran harus diselesaikan dalam waktu maksimal 24 jam setelah melakukan permintaan top up.\nJika dalam waktu tersebut tidak ada konfirmasi pembayaran, maka transaksi top up akan otomatis dibatalkan dan harus dilakukan ulang.\n\n
4. Gunakan hanya metode pembayaran resmi yang tersedia pada aplikasi.\nPembayaran melalui jalur tidak resmi atau pihak ketiga di luar aplikasi ini dapat menyebabkan kegagalan transaksi dan kehilangan dana.\n\n
5. Jika terjadi kendala atau transaksi gagal, silakan segera hubungi layanan pelanggan.\nTim customer service kami siap membantu menyelesaikan permasalahan terkait transaksi, namun pengguna wajib menyertakan bukti transaksi yang sah untuk proses verifikasi.</string>
    <string name="button_confirm_payment">Konfirmasi Pembayaran</string>

    <!-- Note: Detail Produk -->
    <string name="product_series">Oftast</string>
    <string name="product_description">piring, putih, 25 cm</string>
    <string name="product_currency">Rp. </string>
<!--    <string name="product_price">%1$,d</string>,-->
    <string name="product_purchase_count">%1$d orang telah membeli produk ini</string>
    <string name="stock_info_title">Stok tersedia %1$d di %2$s</string>
    <string name="icon_desc"></string>
    <string name="product_main_features">Fitur utama</string>
    <string name="product_main_features_detail">Peralatan makan ini memiliki tampilan dan
        kesan sama seperti porselen tulang namun terbuat dari kaca tempered. Artinya kami
        dapat menekan harga dan Anda mendapatkan produk yang elegan dan berkilau - dengan
        biaya lebih rendah.</string>
    <!--    <string name="product_spec">Spesifikasi</string>-->
    <string name="product_size_weight">Ukuran &amp; berat paket</string>
    <string name="product_spec_length">Panjang:</string>
    <string name="product_spec_length_detail">%1$d cm</string>
    <string name="product_spec_diameter">Diameter:</string>
    <string name="product_spec_diameter_detail">%1$d cm</string>
    <string name="product_spec_volume">Volume per paket:</string>
    <string name="product_spec_volume_detail">%1$.2f l</string>
    <string name="product_spec_gross_weight">Berat kotor:</string>
    <string name="product_spec_gross_weight_detail">%1$.2f kg</string>
    <string name="product_spec_net_weight">Berat bersih:</string>
    <string name="product_spec_net_weight_detail">%1$.2f kg</string>
    <string name="product_materials">Bahan</string>
    <string name="product_materials_detail">Kaca tempered oval</string>
    <string name="product_care_instructions">Petunjuk perawatan</string>
    <string name="product_care_instructions_detail">Aman untuk microwave. Aman untuk
        mesin cuci</string>
    <string name="product_adds_info">Informasi tambahan</string>
    <string name="product_info_benefit">Manfaat</string>
    <string name="product_info_benefit_detail">Anda bisa menggunakan piring ini sebagai
    tutup yang praktis untuk mangkuk saji dalam seri yang sama. Terbuat dari kaca temper 
        untuk menambah kekuatan dan daya tahan. Aman untuk mesin pencuci piring dan 
        microwave, sehingga mudah dibersihkan dan dipanaskan kembali.</string>
    <string name="product_info_important_note">Penting untuk diketahui</string>
    <string name="product_info_important_note_detail">Hindari memaparkan kaca temper
        terhadap perubahan suhu yang tiba-tiba, misalnya saat meletakkan piring dingin ke dalam
        microwave, karena dapat menyebabkan kerusakan mendadak. Cuci produk lebih dulu sebelum menggunakannya. Bahan dalam produk ini dapat didaur ulang. Silahkan periksa aturan daur ulang di komunitas Anda dan apakah ada fasilitas daur ulang di daerah AndaPenting untuk diketahui</string>
    <string name="product_desainer">Henrik Preutz</string>
    <string name="product_similar">Produk Serupa</string>


<!--    NOTE: Keranjang belanja-->
    <string name="cart_title">Keranjang Belanja</string>
    <string name="cart_delete_all">Hapus Semua</string>
    <string name="cart_total_product_num">3</string>
    <string name="cart_total_product"> produk</string>
    <string name="cart_total_price">10.000</string>
    <string name="choose_pickup_point">Pilih Pick Up Point</string>

    <!--    NOTE: bottom sheet store-->
    <string name="stock_available">Stok tersedia</string>
    <string name="available_in_store">%1$d tersedia</string>
    <string name="out_of_stock">Stok kosong di %1$s</string>

    <!--    NOTE: bottom sheet pick up-->
    <string name="pickup_point_name">Nama Pick Up Point</string>
    <string name="pickup_point_address">Alamat Pick Up Point</string>
<!--    <string name="ithb_pickup_point">23 Paskal Pick-Up Point ITHB Pick-Up Point</string>-->
<!--    <string name="ithb_pickup_point_address">Jl. Pasir Kaliki No. 25, Bandung Jl. Dipatiukur
No. 80–84, Bandung</string>-->

    <!-- note: My Profile-->
    <string name="my_profil">Profil saya</string>
    <string name="title_section_nama">Nama Lengkap</string>
    <string name="title_section_nama_depan">Depan</string>
    <string name="title_section_nama_belakang">Belakang</string>
    <string name="hint_nama_depan">Devid</string>
    <string name="hint_nama_belakang">Laritsan</string>
    <string name="title_section_alamat">Alamat Lengkap</string>
    <string name="title_section_alamat_detail">Alamat</string>
    <string name="hint_alamat_detail">Jl. Cicalengka Barat No. 45</string>
    <string name="title_section_alamat_kode_pos">Kode Pos</string>
    <string name="hint_alamat_kode_pos">48202</string>
    <string name="title_section_email">Email</string>
    <string name="hint_section_email">devid@gmail.com</string>
    <string name="button_simpan_perubahan_profile">Simpan Akun</string>
    <string name="tile_section_kata_sandi">Ubah Kata Sandi</string>
    <string name="title_kata_sandi_saat_ini">Masukkan kata sandi saat ini</string>
    <string name="title_masukkan_kata_sandi_baru">Masukkan kata sandi baru</string>
    <string name="title_konfirmasi_kata_sandi_baru">Konfirmasi kata sandi baru</string>
    <string name="button_simpan_perubahan_kata_sandi">Simpan Kata Sandi</string>
    <string name="button_hapus_akun">Hapus Akun</string>

    <!-- note: Top Up -->
    <string name="top_up">Top Up</string>

    <!-- note: Bottom Nav Bar -->
    <string name="nav_bottom_home">Beranda</string>
    <string name="nav_bottom_inspo">Inspirasi</string>
    <string name="nav_bottom_cart">Keranjang</string>
    <string name="nav_bottom_account">Akun</string>

    <string name="product_1">LACK Table</string>
    <string name="product_2">POÄNG Chair</string>
    <string name="product_3">MALM Bed Frame</string>
    <string name="product_1_desc">Meja serbaguna dengan desain minimalis, warna puti...</string>
    <string name="product_2_desc">Kursi santai dengan bantalan empuk dan rangka kayu...</string>
    <string name="product_3_desc">MRangka tempat tidur kayu dengan desain sederhana.</string>
</resources>