<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Authentication.View.DetailAccountFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/account_toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.0">

        <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content">-->
        <!-- 👇 Tambahkan LinearLayout pembungkus -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- SECTION 1: Info Profil -->
            <LinearLayout
                android:id="@+id/section_info_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Nama -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_section_nama"
                    android:fontFamily="@font/mplus1pbold"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingEnd="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mplus1pmedium"
                            android:text="@string/title_section_nama_depan" />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mplus1pmedium"
                            android:hint="@string/hint_nama_depan" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingStart="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mplus1pmedium"
                            android:text="@string/title_section_nama_belakang" />
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mplus1pmedium"
                            android:hint="@string/hint_nama_belakang" />
                    </LinearLayout>
                </LinearLayout>

                <!-- Alamat -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_section_alamat"
                    android:fontFamily="@font/mplus1pbold"
                    android:textSize="17sp"
                    android:layout_marginTop="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_section_alamat_detail"
                    android:fontFamily="@font/mplus1pmedium"
                    android:layout_marginTop="8dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_alamat_detail" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_section_alamat_kode_pos"
                    android:fontFamily="@font/mplus1pmedium"
                    android:layout_marginTop="12dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_alamat_kode_pos"
                    android:inputType="number" />

                <!-- Email -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_section_email"
                    android:fontFamily="@font/mplus1pbold"
                    android:textSize="17sp"
                    android:layout_marginTop="12dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_section_email"
                    android:fontFamily="@font/mplus1pmedium"
                    android:inputType="textEmailAddress" />

                <!-- Simpan Akun -->
                <Button
                    android:id="@+id/button_simpan_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_simpan_perubahan_profile"
                    android:fontFamily="@font/mplus1pextrabold"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#000" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#656565" />

            <!-- SECTION 2: Ubah Kata Sandi -->
            <LinearLayout
                android:id="@+id/section_kata_sandi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="100dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tile_section_kata_sandi"
                    android:fontFamily="@font/mplus1pbold"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_kata_sandi_saat_ini"
                    android:fontFamily="@font/mplus1pmedium"
                    android:layout_marginTop="12dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mplus1pmedium"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_masukkan_kata_sandi_baru"
                    android:fontFamily="@font/mplus1pmedium"
                    android:layout_marginTop="8dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mplus1pmedium"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_konfirmasi_kata_sandi_baru"
                    android:fontFamily="@font/mplus1pmedium"
                    android:layout_marginTop="8dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mplus1pmedium"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/button_simpan_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_simpan_perubahan_kata_sandi"
                    android:fontFamily="@font/mplus1pextrabold"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="#000" />

                <Button
                    android:id="@+id/button_hapus_akun"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_hapus_akun"
                    android:fontFamily="@font/mplus1pextrabold"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@android:color/holo_red_dark" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>