<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customBottomNav"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="#FFFFFF"
    android:elevation="8dp"
    android:paddingHorizontal="4dp"
    android:layout_marginBottom="14dp">

    <!-- HOME -->
    <LinearLayout
        android:id="@+id/navHome"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="4dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_home_24"
            android:contentDescription="@string/nav_bottom_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_bottom_home"
            android:textSize="12sp"
            android:textColor="#000000" />
    </LinearLayout>

    <!-- INSPIRATION -->
    <LinearLayout
        android:id="@+id/navInspiration"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="4dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_article_24"
            android:contentDescription="@string/nav_bottom_inspo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_bottom_inspo"
            android:textSize="12sp"
            android:textColor="#000000" />
    </LinearLayout>

    <!-- CART -->
    <LinearLayout
        android:id="@+id/navCart"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="4dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_shopping_cart_24"
            android:contentDescription="@string/nav_bottom_cart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_bottom_cart"
            android:textSize="12sp"
            android:textColor="#000000" />
    </LinearLayout>

    <!-- ACCOUNT -->
    <LinearLayout
        android:id="@+id/navAccount"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="4dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_person_24"
            android:contentDescription="@string/nav_bottom_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_bottom_account"
            android:textSize="12sp"
            android:textColor="#000000" />
    </LinearLayout>
</LinearLayout>
